--- a/natsune/index.html
+++ b/natsune/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./test.css">
 </head>
 <body>
     <header class="header">
@@ -46,10 +47,11 @@
                     <span class="accordion-icon"></span>
                 </div>
                 <div class="accordion-content">
-                    <img src="" alt="">
-                    <p class="friend-name">鍋島</p>
+                    <img src="./img/なべし.PNG" alt="">
+                    <p class="friend-name">鍋島士童</p>
                     <p class="friend-food">好きな中華料理：エビチリ</p>
-                    <p>いつもより睡眠時間短い中頑張ってくれて本当にありがとう！　<br>今度HarbarSでごはん食べるときはエビチリにしよう！</p>
+                    <img src="./img/ebitiri.jpg" alt="">
+                    <p class="friend-text">いつもより睡眠時間短い中頑張ってくれて本当にありがとう！　<br>今度HarbarSでごはん食べるときはエビチリにしよう！</p>
                 </div>
                 </div>
                 <div class="accordion-item">
@@ -62,7 +64,7 @@
                     <p class="friend-name">後藤メイ</p>
                     <p class="friend-food">好きな中華料理：小籠包</p>
                     <img src="./img/小籠包.jpg" alt="">
-                    <p>POSSE入ってくれて本当にありがとう！ <br>中３のときは大学生になって一緒にプログラミング勉強してるなんて想像してなかったよー　<br>これからもよろしくね！！</p>
+                    <p class="friend-text">POSSE入ってくれて本当にありがとう！ <br>中３のときは大学生になって一緒にプログラミング勉強してるなんて想像してなかったよー　<br>これからもよろしくね！！</p>
                 </div>
                 </div>
                 <div class="accordion-item">
@@ -75,7 +77,7 @@
                     <p class="friend-name">木内順正</p>
                     <p class="friend-food">好きな中華料理：餃子</p>
                     <img src="./img/餃子.jpg" alt="">
-                    <p>3回目、？4回目、？の同じ横もくだね笑 <br>じゅんせいと話すと１００％恋バナになるのなんでかなー？ <br>これからも沢山話きかせてね！</p>
+                    <p class="friend-text">3回目、？4回目、？の同じ横もくだね笑 <br>じゅんせいと話すと１００％恋バナになるのなんでかなー？ <br>これからも沢山話きかせてね！</p>
                 </div>
                 </div>
                 <div class="accordion-item">
@@ -88,12 +90,15 @@
                     <p class="friend-name">川島美咲</p>
                     <p class="friend-food">好きな中華料理:麻婆豆腐</p>
                     <img src="./img/麻婆豆腐.jpg" alt="">
+                    <p class="friend-text">7月の新ハ以来会えてないのほんとにびっくり、！！ <br>今回美咲来られなくてめっちゃ残念だったけど美咲の分も頑張ったつもりー！ <br>今度HabarS来れる日あったら教えてね！！</p>
                 </div>
                 </div>
             </div>
         </section>
-        
     </main>
+    <footer class="footer">
+        <p>编程是我的爱人</p>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
