--- a/main/index.html
+++ b/main/index.html
@@ -15,9 +15,30 @@
         <section class="menu-info">
             <p class="tittle">メニュー紹介</p>
             <div class="menu">
-                <img  class="food-img" src="./img/ebitiri.jpg" alt="">
-                <p>エビチリ</p>
+                <div class="menu_list">
+                    <ul>
+                        <li class="food_contents">
+                            <img  class="food-img" src="./img/ebitiri.jpg" alt="">
+                            <p class="food_menu">エビチリ</p>
+                        </li>
+                        <li class="food_contents">
+                            <img class="food-img" src="./img/hoiko-ro-.jpg" alt="">
+                            <p class="food_menu">回鍋肉</p>
+                        </li>
+                    </ul>
+                    <ul>
+                        <li class="food_contents">
+                            <img class="food-img" src="./img/ma-bo-douhu.jpg" alt="">
+                            <p class="food_menu">麻婆豆腐</p>
+                        </li>
+                        <li class="food_contents">
+                            <img class="food-img" src="./img/ramen.jpg" alt="">
+                            <p class="food_menu">ラーメン</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
         </section>
         <section class="staff-info">
             <p class="tittle">スタッフ紹介</p>
@@ -36,9 +57,24 @@
                 </div>
             </div>
         </section>
+        <p class="tittle">口コミ評価</p>
+        <form type="get" action="#">
+            <div class="evaluation">
+              <input id="star1" type="radio" name="star" value="5" />
+              <label for="star1"><span class="text">最高</span>★</label>
+              <input id="star2" type="radio" name="star" value="4" />
+              <label for="star2"><span class="text">良い</span>★</label>
+              <input id="star3" type="radio" name="star" value="3" />
+              <label for="star3"><span class="text">普通</span>★</label>
+              <input id="star4" type="radio" name="star" value="2" />
+              <label for="star4"><span class="text">悪い</span>★</label>
+              <input id="star5" type="radio" name="star" value="1" />
+              <label for="star5"><span class="text">最悪</span>★</label>
+            </div>
+          </form>
     </main>
     <footer class="footer">
-        <p>编程是我的爱人</p>
+        <p class="footer_p">编程是我的爱人</p>
     </footer>
     <script src="./script.js"></script>
 </body>
