--- a/nabeC/index.html
+++ b/nabeC/index.html
@@ -42,11 +42,11 @@
                 <div class="about_me">
                         <img src="./img/なべC.jpg" alt="" class="my_img">
                     <ul class="about_me_list">
-                        <li>・名前：鍋島士童</li>
-                        <li>・大学・学部・学科 <br> 芝浦工業大学・工学部・情報工学科</li>
-                        <li>・得意科目：物理</li>
-                        <li>・好きな中華料理：エビチリ</li>
-                        <li>・バイト：お蕎麦屋さんと塾講師の二刀流</li>
+                        <li class="about_me_inner">・名前：鍋島士童</li>
+                        <li class="about_me_inner">・大学・学部・学科 <br> 芝浦工業大学・工学部・情報工学科</li>
+                        <li class="about_me_inner">・得意科目：物理</li>
+                        <li class="about_me_inner">・好きな中華料理：エビチリ</li>
+                        <li class="about_me_inner">・バイト：お蕎麦屋さんと塾講師の二刀流</li>
                     </ul>
                 </div>
             <ul class="about_me_img_list">
