--- a/nabeC/index.html
+++ b/nabeC/index.html
@@ -70,7 +70,7 @@
                 <h2 class="question_title">～質問箱～</h2>
                 <div class="question">
                     <input value="" id="question-input" type="text" placeholder=" なべCへの質問を入力してください。"class="question-input">
-                    <button onclick="question_button()" class="question-button">質問！</button>
+                    <button onclick="question_button()" class="question-button">質問!</button>
                 </div>
             </div>
         </section>
@@ -78,64 +78,66 @@
         <!-- メンバー紹介のコードここから -->
         <section class="member_section" id="member_section">
             <h1 class="member_title">～メンバー紹介～</h1>
-            <ul class="member_list" id="member_list">
-                <li class="member" id="member_1">
-                    <div class="member-div">
-                        <figure class="member_img">
-                            <img src="./img/なつね.jpg" alt="夏寧">
-                            <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="ろご">
-                        </figure>
-                        <ul class="member_introduce">
-                            <li>名前 : なつね</li>
-                            <li>好きな中華料理 : チャーハン</li>
-                            <li>なつねはこんな人！ <br> 意思表示がはっきりしてる！</li>
-                            <li>なつねにひとこと！ <br> いつも頼りにしてます！</li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="member" id="member_2">
-                    <div class="member-div">
-                        <figure class="member_img">
-                            <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="">
-                            <img src="./img/めい(1).jpg" alt="めい">
-                        </figure>
-                        <ul class="member_introduce">
-                            <li>名前 : めい</li>
-                            <li>好きな中華料理 : 小籠包</li>
-                            <li>めいはこんな人！ <br> いつも明るい！</li>
-                            <li>めいにひとこと！ <br> 気軽に話して！</li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="member" id="member_3">
-                    <div class="member-div">
-                        <figure class="member_img">
-                            <img src="./img/じゅんせい.jpg" alt="じゅんせい">
-                            <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="ロゴ">
-                        </figure>
-                        <ul class="member_introduce">
-                            <li>名前 : じゅんせい</li>
-                            <li>好きな中華料理 : ラーメン</li>
-                            <li>じゅんせいはこんな人！ <br> 恋バナが大好き</li>
-                            <li>じゅんせいにひとこと！ <br> 今度遊ぼ！</li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="member" id="member-4">
-                    <div class="member-div">
-                        <figure class="member_img">
-                            <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="ろご">
-                            <img src="./img/美咲.jpg" alt="みさき">
-                        </figure>
-                        <ul class="member_introduce">
-                            <li>名前 : みさき</li>
-                            <li>好きな中華料理 : 餃子</li>
-                            <li>みさきはこんな人！ <br> おしゃれ！</li>
-                            <li>みさきにひとこと！ <br> 会う機会すくないけどよろしく！</li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
+            <div class="member_list_outer" id="member_list_outer">
+                <ul class="member_list" id="member_list">
+                    <li class="member" id="member_1">
+                        <div class="member-div">
+                            <figure class="member_img">
+                                <img src="./img/なつね.jpg" alt="夏寧">
+                                <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="ろご">
+                            </figure>
+                            <ul class="member_introduce">
+                                <li>名前 : なつね</li>
+                                <li>好きな中華料理 : チャーハン</li>
+                                <li>なつねはこんな人！ <br> 意思表示がはっきりしてる！</li>
+                                <li>なつねにひとこと！ <br> いつも頼りにしてます！</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="member" id="member_2">
+                        <div class="member-div">
+                            <figure class="member_img">
+                                <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="">
+                                <img src="./img/めい(1).jpg" alt="めい">
+                            </figure>
+                            <ul class="member_introduce">
+                                <li>名前 : めい</li>
+                                <li>好きな中華料理 : 小籠包</li>
+                                <li>めいはこんな人！ <br> いつも明るい！</li>
+                                <li>めいにひとこと！ <br> 気軽に話して！</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="member" id="member_3">
+                        <div class="member-div">
+                            <figure class="member_img">
+                                <img src="./img/じゅんせい.jpg" alt="じゅんせい">
+                                <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="ロゴ">
+                            </figure>
+                            <ul class="member_introduce">
+                                <li>名前 : じゅんせい</li>
+                                <li>好きな中華料理 : ラーメン</li>
+                                <li>じゅんせいはこんな人！ <br> 恋バナが大好き</li>
+                                <li>じゅんせいにひとこと！ <br> 今度遊ぼ！</li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="member" id="member-4">
+                        <div class="member-div">
+                            <figure class="member_img">
+                                <img src="./img/チームロゴ(2023.11ハッカソン).png" alt="ろご">
+                                <img src="./img/美咲.jpg" alt="みさき">
+                            </figure>
+                            <ul class="member_introduce">
+                                <li>名前 : みさき</li>
+                                <li>好きな中華料理 : 餃子</li>
+                                <li>みさきはこんな人！ <br> おしゃれ！</li>
+                                <li>みさきにひとこと！ <br> 会う機会すくないけどよろしく！</li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
         </section>
         <!-- メンバー紹介のコードここまで -->
